dataset1235/2025-2/2318198438/users/2721560707/executions/2601575092_211162095.log
== RUN (2025-08-14 00:43:14)
-- CODE: 
print 'ola'
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 1
    print 'ola'
    ^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 1
    print 'ola'
    ^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 00:42:51)
-- CODE: 
print ('ola')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
ola
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
ola
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:40:54)
-- CODE: 
print("ola")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
ola
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
ola
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:42:46)
-- CODE: 
print ('ola')
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
ola
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
ola
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:45:11)
-- CODE: 
print('Universidade Federal do Amazonas')
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:44:14)
-- CODE: 
print('ola')
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
ola
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
ola
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:45:22)
-- CODE: 
print('Universidade Federal do Amazonas')
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:41:56)
-- CODE: 
print""ola""
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 1
    print""ola""
    ^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 1
    print""ola""
    ^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 00:42:23)
-- CODE: 
print ('ola')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
ola
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
ola
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:41:23)
-- CODE: 
print(""ola"")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 1
    print(""ola"")
          ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 1
    print(""ola"")
          ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 00:41:59)
-- CODE: 
print""ola""
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 1
    print""ola""
    ^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
-- TEST CASE 2:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 1
    print""ola""
    ^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
